--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -2474,6 +2474,10 @@ html {
   height: 100vh;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
 .w-40 {
   width: 10rem;
 }
@@ -2538,10 +2542,6 @@ html {
   place-items: center;
 }
 
-.items-center {
-  align-items: center;
-}
-
 .justify-center {
   justify-content: center;
 }
@@ -2570,10 +2570,6 @@ html {
 
 .rounded-lg {
   border-radius: 0.5rem;
-}
-
-.border-2 {
-  border-width: 2px;
 }
 
 .border-transparent {
@@ -2766,6 +2762,10 @@ html {
 @media (min-width: 1536px) {
   .\32xl\:hidden {
     display: none;
+  }
+
+  .\32xl\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .\32xl\:max-w-lg {
