--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -2652,6 +2652,10 @@ html {
   height: 100vh;
 }
 
+.h-textarea_s {
+  height: 2.5rem;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -2722,6 +2726,10 @@ html {
 
 .content-center {
   align-content: center;
+}
+
+.content-start {
+  align-content: flex-start;
 }
 
 .items-center {
@@ -2915,6 +2923,16 @@ html {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 @media (hover: hover) {
   .hover\:btn-success:hover:hover {
     --tw-border-opacity: 1;
@@ -3014,6 +3032,10 @@ html {
 .hover\:bg-sky-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(3 105 161 / var(--tw-bg-opacity));
+}
+
+.focus\:h-textarea_m:focus {
+  height: 10rem;
 }
 
 @media not all and (min-width: 1536px) {
