--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -2599,6 +2599,11 @@ html {
   margin-bottom: 0px;
 }
 
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
